tests/snapshots/examples_fixtures/type_system__failing__48_main_invalid_return_type.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/48_main_invalid_return_type.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E412]: INVALID MAIN RETURN TYPE

`fn main` must return `Unit` (or omit return type).

  --> examples/type_system/failing/48_main_invalid_return_type.flx:3:14
  |
3 | fn main() -> Int {
  |              ^^^
  |              --- invalid `main` return type

Hint:
  Change signature to `fn main() { ... }` or `-> Unit`.
== stdout ==
<not executed>
